--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.10.3",
     "nuxt": "^3.9.0",
+    "prettier": "^3.1.1",
     "sass": "^1.69.7",
     "vue": "^3.4.3",
     "vue-router": "^4.2.5"
