--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.10.3",
+    "husky": "^8.0.3",
     "nuxt": "^3.9.0",
     "prettier": "^3.1.1",
     "sass": "^1.69.7",
